<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwipeMe</string>
    <string name="facebook_app_id">339292299592657</string>

    <!-- Menu Options -->

    <string name="action_settings">Settings</string>
    <string name="action_listings">My Listings</string>
    <string name="action_messages">Messages</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_logout">Log Out</string>

    <!--Messaging-->
    <string name="title_activity_chat">Messages</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="message_elipses">Message...</string>

    <!-- Dining Halls -->

    <string name="food_deneve">De Neve</string>
    <string name="food_feast">Feast</string>
    <string name="food_bplate">Bruin Plate</string>
    <string name="food_covel">Covel</string>
    <string name="food_bcafe">Bruin Cafe</string>
    <string name="food_1919">Cafe 1919</string>
    <string name="food_rendez">Rendezvous</string>
    <string name="food_latenight">De Neve Late Night</string>
    <string name="food_hedrick">Hedrick Late Night</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="SwipeMeLogoText">SwipeMe</string>
    <string name="title_activity_home"></string>

    <!-- Buy Activity -->
    <string name="title_activity_buy">Buy</string>

    <!-- Sell Activity -->
    <string name="title_activity_sell">Sell</string>
    <string name="sell_price_header">Price</string>
    <string name="quantity_header">Quantity</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="sell_price_hint">Price</string>
    <string name="sell_button">Post Offer</string>

    <!-- Quantity Spinner Values -->
    <string-array name="quantity_array">
        <item>How many?</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Price Spinner Values -->
    <string-array name="price_array">
        <item>Select your price per swipe...</item>
        <item>$1.00</item>
        <item>$1.50</item>
        <item>$2.00</item>
        <item>$2.50</item>
        <item>$3.00</item>
        <item>$3.50</item>
        <item>$4.00</item>
        <item>$4.20</item>
        <item>$5.00</item>
        <item>$5.50</item>
        <item>$6.00</item>
        <item>$6.50</item>
        <item>$7.00</item>
        <item>$7.50</item>
        <item>$8.00</item>
        <item>$8.50</item>
        <item>$9.00</item>
        <item>$9.50</item>
        <item>$10.00</item>
    </string-array>

    <!-- My Listings -->
    <string name="title_activity_my_listings">My Listings</string>

    <!-- Buy Listings Values -->
    <string name="title_activity_buy_listings">BuyListingsActivity</string>
    <string name="buy_search_for_listings">Search for Listings</string>
    <string name="title_activity_dining_times">DiningTimesActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dining_menu">DiningMenuActivity</string>

</resources>
