
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.swipeme.www.swipeme.HomeActivity$PlaceholderFragment">
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_halls">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <CheckBox
            android:id="@+id/check_bplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_bplate"
            />

        <CheckBox
            android:id="@+id/check_covel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_covel" />

        <CheckBox
            android:id="@+id/check_deneve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_deneve" />

        <CheckBox
            android:id="@+id/check_feast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_feast"
            />

        <CheckBox
            android:id="@+id/check_bcafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_bcafe"
            android:checked="false" />

        <CheckBox
            android:id="@+id/check_1919"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_1919"
            />

        <CheckBox
            android:id="@+id/check_rendez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_rendez"
            android:checked="false" />

        <CheckBox
            android:id="@+id/check_latenight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_latenight"
            />

        <CheckBox
            android:id="@+id/check_hedrick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/food_hedrick"
            />

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/page_buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/check_halls">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Buy"
            />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sell"
            />
    </LinearLayout>

</RelativeLayout>