<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.swipeme.www.swipeme.HomeActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_listings"
        android:title="@string/action_listings"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item android:id="@+id/action_messages"
        android:title="@string/action_messages"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:id="@+id/action_display_times"
        android:title="Dining Times"
        android:orderInCategory="3"/>
    <item android:id="@+id/action_display_menus"
        android:title="Dining Menus"
        android:orderInCategory="4"/>

    <!--<item android:id="@+id/action_notification"
        android:title="@string/action_notifications"
        android:orderInCategory="5"
        app:showAsAction="never"/>-->

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="5"
        app:showAsAction="never"/>

</menu>
