<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swipeme.www.swipeme.SellActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <ListView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="300dp">
                </ListView>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/time"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <Button
                    android:id="@+id/start_time_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/start_time"
                    android:textColor="#FFFFFF"
                    android:onClick="showStartTimePickerDialog" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <Button
                    android:id="@+id/end_time_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/end_time"
                    android:textColor="#FFFFFF"
                    android:onClick="showEndTimePickerDialog" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <com.swipeme.www.swipeme.ButtonPlus
            android:id="@+id/search_for_listings_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/buy_search_for_listings"
            android:textColor="#FFFFFF"
            android:onClick="startBuyListings"
            style="@style/button"/>
    </RelativeLayout>



</RelativeLayout>